# rust-skia

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  azure-pipelines-build-target.yml  azure-pipelines-template.yml  azure-pipelines.yml  build-shared-skia.sh  build.rs  flake.nix  justfile  test.md
skia-bindings/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  bindings_docs.rs  build.rs  build_support.rs  skparagraph.patch
skia-bindings/build_support/: android.rs  azure.rs  binaries.rs  binaries_config.rs  binary_cache.rs  bind_skia.rs  build_skia.rs  cargo.rs  clang.rs  features.rs  git.rs  ios.rs  macos.rs  platform.rs  skia.rs  skia_bindgen.rs  skia_c_bindings.rs  utils.rs  vs.rs  xcode.rs
skia-bindings/build_support/binary_cache/: binaries.rs  download.rs  env.rs  export.rs  git.rs  github_actions.rs  utils.rs
skia-bindings/build_support/build_skia/: config.rs  env.rs
skia-bindings/build_support/platform/: alpine.rs  android.rs  emscripten.rs  generic.rs  ios.rs  linux.rs  macos.rs  ohos.rs  wasm.rs  wasm_unknown.rs  windows.rs
skia-bindings/build_support/skia/: config.rs  env.rs  llvm.rs  vs.rs
skia-bindings/ninja/: ninja
skia-bindings/src/: bindings.cpp  bindings.h  d3d.cpp  defaults.rs  egl.cpp  gl.cpp  gpu.cpp  graphite.cpp  icu.rs  impls.rs  lib.rs  metal.cpp  paragraph.cpp  rust_resource_provider.h  shaper.cpp  skottie.cpp  skresources.cpp  svg.cpp  vulkan.cpp  wasm_alloc_shim.rs  wasm_unknown_unknown_malloc_shim.cpp  wasm_unknown_unknown_wasi_shim.c  webp-encode.cpp
skia-bindings/tests/: build_support.rs
skia-org/: Cargo.toml
skia-org/src/: artifact.rs  drivers.rs  helper.rs  main.rs  skcanvas_overview.rs  skpaint_overview.rs  skparagraph_example.rs  skpath_overview.rs  skshaper_example.rs
skia-org/src/drivers/: cpu.rs  d3d.rs  gl.rs  metal.rs  pdf.rs  render_svg.rs  svg.rs  svg_render.rs  vulkan.rs
skia-safe/: Cargo.toml  README.md
skia-safe/examples/: graphite_hello.rs  metal_graphite_README.md  metal_graphite_window.rs
skia-safe/examples/d3d-window/: main.rs
skia-safe/examples/dotlottie/: main.rs
skia-safe/examples/gl-window/: Cargo.toml  main.rs
skia-safe/examples/hello/: canvas.rs  main.rs
skia-safe/examples/icon/: main.rs  renderer.rs
skia-safe/examples/lottie/: main.rs
skia-safe/examples/metal-window/: main.rs
skia-safe/examples/metal-window2/: main.rs
skia-safe/examples/skia-org/: artifact.rs  drivers.rs  main.rs  skcanvas_overview.rs  skpaint_overview.rs  skparagraph_example.rs  skpath_overview.rs  skshaper_example.rs
skia-safe/examples/svg/: main.rs
skia-safe/examples/vulkan-window/: context.rs  main.rs  renderer.rs
skia-safe/src/: codec.rs  core.rs  docs.rs  effects.rs  encode_.rs  gpu.rs  graphics.rs  graphite.rs  interop.rs  lib.rs  macros.rs  modules.rs  pathops.rs  prelude.rs  private.rs  skia.rs  skottie.rs  svg.rs  utils.rs  wrapper.rs
skia-safe/src/codec/: _codec.rs  codec_animation.rs  decoder.rs  decoders.rs  encoded_image_format.rs  encoded_origin.rs  pixmap_utils.rs
skia-safe/src/core/: alpha_type.rs  annotation.rs  arc.rs  bbh_factory.rs  bitmap.rs  blend_mode.rs  blender.rs  blur_types.rs  canvas.rs  clip_op.rs  color.rs  color_filter.rs  color_space.rs  color_space_xform_canvas.rs  color_table.rs  color_type.rs  contour_measure.rs  coverage_mode.rs  cpu_recorder.rs  cubic_map.rs  data.rs  data_table.rs  deferred_display_list.rs  deferred_display_list_recorder.rs  document.rs  draw_looper.rs  drawable.rs  encoded_image_format.rs  filter_quality.rs  flattenable.rs  font.rs  font_arguments.rs  font_arguments_.rs  font_metrics.rs  font_metrics_.rs  font_mgr.rs  font_parameters.rs  font_style.rs  font_style_.rs  font_types.rs  (+61 more)
skia-safe/src/docs/: pdf_document.rs
skia-safe/src/effects/: _1d_path_effect.rs  _2d_path_effect.rs  alpha_threshold_filter.rs  arithmetic_image_filter.rs  blenders.rs  blur_draw_looper.rs  blur_image_filter.rs  color_filter_image_filter.rs  color_matrix.rs  color_matrix_filter.rs  compose_image_filter.rs  corner_path_effect.rs  dash_path_effect.rs  discrete_path_effect.rs  displacement_map_effect.rs  drop_shadow_image_filter.rs  gradient.rs  gradient_shader.rs  high_contrast_filter.rs  image_filters.rs  image_source.rs  layer_draw_looper.rs  lighting_image_filter.rs  luma_color_filter.rs  magnifier_image_filter.rs  matrix_convolution_image_filter.rs  merge_image_filter.rs  morphology_image_filter.rs  offset_image_filter.rs  op_path_effect.rs  overdraw_color_filter.rs  paint_image_filter.rs  path_effect_1d.rs  path_effect_2d.rs  perlin_noise_shader.rs  picture_image_filter.rs  runtime_effect.rs  shader_mask_filter.rs  stroke_and_fill_path_effect.rs  table_color_filter.rs  (+4 more)
skia-safe/src/encode_/: jpeg_encoder.rs  png_encoder.rs  png_rust_encoder.rs  webp_encoder.rs
skia-safe/src/gpu/: backend_drawable_info.rs  backend_surface.rs  backend_surface_mutable_state.rs  context.rs  context_options.rs  d3d.rs  direct_context.rs  ganesh.rs  gl.rs  gpu_types.rs  mtl.rs  mutable_texture_state.rs  recording_context.rs  types.rs  vk.rs  yuva_backend_textures.rs
skia-safe/src/graphics/: backend_surface.rs  backend_texture.rs  context.rs  gl.rs  types.rs  vulkan.rs
skia-safe/src/graphite/: backend_texture.rs  context.rs  context_options.rs  image_graphite.rs  mtl.rs  recorder.rs  recording.rs  surface_graphite.rs  texture_info.rs  types.rs
skia-safe/src/interop/: cpp.rs  stream.rs  string.rs  strings.rs
skia-safe/src/modules/: image_asset.rs  paragraph.rs  resources.rs  shaper.rs  skottie.rs  svg.rs
skia-safe/tests/: api.rs  codec.rs  encoder.rs  send_sync.rs  shaper.rs
skia-svg-macros/: Cargo.toml
skia-svg-macros/src/: lib.rs
skia-wasm-shims/: Cargo.toml
skia-wasm-shims/src/: glemu.rs  lib.rs  wasi.rs
src/: lib.rs  (+8 more)
wasm-example/unknown/: .gitignore  Cargo.toml  Makefile  README.md
wasm-unknown-webgl-example/: Cargo.toml  Makefile  README.md
wasm-unknown-webgl-example/src/: lib.rs
wasm-unknown-webgl-example/web/: index.html  main.js
(+368 files in other folders)
