[workspace]
resolver = "2"
members = [
    "skia-safe",
    "skia-svg-macros",
    "skia-bindings",
    "skia-org",
    "mk-workflows",
    "comment-converter",
]

[workspace.package]
rust-version = "1.82"

[profile.release]
# We want to build skia-org with with lto="thin"
# https://github.com/rust-skia/rust-skia/issues/565
lto = "thin"
