[workspace]
resolver = "3"
members = [
    "skia-safe",
    "skia-svg-macros",
    "skia-bindings",
    "skia-org",
    "skia-wasm-shims",
    "mk-workflows",
    "comment-converter",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[profile.release]
# We want to build skia-org with with lto="thin"
# https://github.com/rust-skia/rust-skia/issues/565
lto = "thin"
