[package]

name = "skia-bindings"
description = "Skia Bindings for Rust"
homepage = "https://github.com/rust-skia/rust-skia/tree/master/skia-bindings"
repository = "https://github.com/rust-skia/rust-skia"
readme = "README.md"
keywords = ["skia", "rust-bindings", "vulkan", "opengl", "pdf"]
categories = ["external-ffi-bindings", "graphics", "multimedia::images", "rendering::graphics-api", "visualization"]
license = "MIT"

version = "0.72.0"
authors = ["LongYinan <lynweklm@gmail.com>", "Armin Sander <armin@replicator.org>"]
edition = "2021"
build = "build.rs"
links = "skia"
include = [
	"Cargo.toml",
	"bindings_docs.rs",
	"build.rs",
	"build_support.rs",
	"build_support/**/*.rs",
	"src/**/*.h",
	"src/**/*.cpp",
	"src/*.rs" ]

[lib]
doctest = false

# Metadata used from inside the packaged crate that defines where to download skia and depot_tools archives from.
# Note: use short hashes here because of filesystem path size restrictions.
[package.metadata]
skia = "m123-0.71.2"
depot_tools = "73a2624"

[features]
default = ["binary-cache", "embed-icudtl"]
gl = []
egl = []
wayland = []
x11 = []
vulkan = []
metal = []
d3d = []
textlayout = []
webp = ["webp-encode", "webp-decode"]
webp-encode = []
webp-decode = []
# sys libraries
use-system-jpeg-turbo = ["mozjpeg-sys"]
# `textlayout` because `SkSVGTextContext::SkSVGTextContext()` invokes `SkShaper::Make`.
svg = ["textlayout"]
shaper = ["textlayout"]
binary-cache = ["flate2", "tar"]
embed-icudtl = ["lazy_static"]
embed-freetype = []

[dependencies]
mozjpeg-sys = { version = "2", features = ["with_simd"], optional = true }
lazy_static = { version = "1.4.0", optional = true }

[build-dependencies]
cc = "1.0.37"
bindgen = "0.69.1"

# For enum variant name replacements.
regex = "1.4.5"
heck = "0.4.0"

# For downloading and extracting prebuilt binaries and skia / depot_tools archives:
# ureq = { version = "2.8.0", optional = true }
flate2 = { version = "1.0.7", optional = true }
tar = { version = "0.4.26", optional = true }

# For reading .cargo.vcs_info.json to get the repository sha1 that is used to download
# the matching prebuilt binaries.
serde_json = "1.0.39"
# For reading Cargo.toml from within a package.
toml = "0.8.0"

[dev-dependencies]
# build dependencies duplicated for testing :(
cc = "1.0.37"
bindgen = "0.69.1"
regex = "1.4.5"
heck = "0.4.0"
# ureq = { version = "2.8.0" }
flate2 = { version = "1.0.7" }
tar = { version = "0.4.26" }
serde_json = "1.0.39"
toml = "0.8.0"
