[package]
name = "skia-org"

description = "Renders examples from skia.org with rust-skia"
homepage = "https://github.com/rust-skia/rust-skia"
repository = "https://github.com/rust-skia/rust-skia"
readme = "README.md"
# 5 max
keywords = ["skia", "rust-bindings", "vulkan", "opengl", "pdf"]
# 6 max
categories = [
    "api-bindings",
    "graphics",
    "multimedia::images",
    "rendering::graphics-api",
    "visualization",
]
license = "MIT"

version = "1.0.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2021"
rust-version.workspace = true

default-run = "skia-org"

[features]
default = []
gl = ["dep:offscreen_gl_context", "dep:sparkle", "skia-safe/gl"]
egl = ["gl", "skia-safe/egl"]
x11 = ["gl", "skia-safe/x11"]
wayland = ["egl", "skia-safe/wayland"]
vulkan = ["dep:ash", "skia-safe/vulkan"]
metal = ["dep:metal", "dep:foreign-types-shared", "dep:cocoa", "dep:objc", "dep:objc2", "dep:objc2-foundation", "skia-safe/metal"]
d3d = ["skia-safe/d3d", "dep:windows"]
textlayout = ["skia-safe/textlayout"]
webp = ["skia-safe/webp"]
svg = ["skia-safe/svg"]

[dependencies]
skia-safe = { path = "../skia-safe" }

# 0.25.1 fails to build on iOS targets on macOS: https://github.com/servo/rust-offscreen-rendering-context/pull/150 
offscreen_gl_context = { git = "https://github.com/rust-skia/rust-offscreen-rendering-context", rev = "82b022cd0e42baaabfb82c319c9785a84a04f395", optional = true }
sparkle = { version = "0.1.25", optional = true }
clap = { version = "4.0.7", features = ["derive"] }
ash = { version = "0.38.0", optional = true }
# need to rename the package because of the feature with the same name.
metal = { package = "metal", version = "0.33.0", optional = true }
# ... to access raw metal ptrs.
foreign-types-shared = { version = "0.3.1", optional = true }
# ... for that NSAutoReleasePool to be able to free metal devices.
cocoa = { version = "0.26", optional = true }
objc = { version = "0.2.4", optional = true }
objc2 = { version = "0.6.3", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }

# d3d
windows = { version = "0.62.0", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
], optional = true }
# default typeface
once_cell = { version = "1.19.0" }

