[package]
name = "wasm-unknown-webgl-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
skia-safe = { path = "../skia-safe", default-features = false, features = ["gl"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebGl2RenderingContext", "WebGlContextAttributes"] }
