[package]
name = "wasm-unknown-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[features]
default = ["skia-safe/textlayout"]
gl = ["skia-safe/gl"]

[dependencies]
skia-safe = { path = "../../skia-safe", default-features = false }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "ImageData",
    "WebGl2RenderingContext",
] }
